<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBB5C4"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewTitle"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109" />

    <TextView
        android:id="@+id/textViewArray"
        android:layout_width="302dp"
        android:layout_height="112dp"
        android:layout_marginTop="27dp"
        android:background="#F7EEEE"
        android:text="@string/textViewArray"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/buttonNewNumbers"
        android:layout_width="228dp"
        android:layout_height="51dp"
        android:layout_marginTop="48dp"
        android:text="@string/buttonNewNumbers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTotals" />

    <Button
        android:id="@+id/buttonTotals"
        android:layout_width="227dp"
        android:layout_height="53dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="44dp"
        android:text="@string/buttonTotals"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSortDescending" />

    <Button
        android:id="@+id/buttonSortAscending"
        android:layout_width="222dp"
        android:layout_height="56dp"
        android:layout_marginTop="51dp"
        android:text="@string/buttonSortAscending"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewArray" />

    <Button
        android:id="@+id/buttonSortDescending"
        android:layout_width="224dp"
        android:layout_height="57dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="44dp"
        android:text="@string/buttonSortDescending"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSortAscending" />

</androidx.constraintlayout.widget.ConstraintLayout>